--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
               <ul>
                 <li><strong><a href="/">Precios</a></strong><br />Desde S/. 0.50 por alumno</li>
                 <li><strong><a href="/">30 días de prueba</a></strong><br />Empieza ya!</li>
-                <li class="signin"><a href="/login">Log in</a></li>
+                <li class="signin"><a href="log_in">Log in</a></li>
               </ul>
-              <a href="/" class="logo">Basecamp</a>
+              <a href="/" class="logo">MiCole</a>
               <div id="randomdiv1" class="stamp companies" style="display: none;"></div>
               <div id="randomdiv2" class="stamp popular" style="display: none;"></div>
               <div id="randomdiv3" class="stamp million" style="display: none;"></div>
