--- a/public/menu.html
+++ b/public/menu.html
@@ -24,7 +24,7 @@ and open the template in the editor.
 			<div class="content-primary">
 			<ul data-role="listview">
 				<li data-role="list-divider">Cuaderno de control</li>
-				<li><a href="/cuadernos_controles/new">Registrar</a></li>
+				<li><a href="/cuadernos_controles">Registrar</a></li>
 				<li><a href="#">Revisar</a></li>
 				<li><a href="#">Consultar</a></li>
 				<li data-role="list-divider">Seguridad de alumnos</li>
