Revision de cuaderno

--- a/public/menu.html
+++ b/public/menu.html
@@ -25,7 +25,7 @@ and open the template in the editor.
 			<ul data-role="listview">
 				<li data-role="list-divider">Cuaderno de control</li>
 				<li><a href="/cuadernos_controles">Registrar</a></li>
-				<li><a href="#">Revisar</a></li>
+				<li><a href="/cuaderno_controles_revisiones">Revisar</a></li>
 				<li><a href="#">Consultar</a></li>
 				<li data-role="list-divider">Seguridad de alumnos</li>
 				<li><a href="#">Registrar personas autorizadas a recoger niños pequeños</a></li>
