verificacion de cuaderno

--- a/public/menu.html
+++ b/public/menu.html
@@ -22,7 +22,7 @@
 				<li data-role="list-divider">Cuaderno de control</li>
 				<li><a href="/cuadernos_controles">Registrar</a></li>
 				<li><a href="/cuaderno_controles_revisiones">Revisar</a></li>
-				<li><a href="#">Consultar</a></li>
+				<li><a href="/cuaderno_controles_revisiones/1/20120713/verificar">Consultar</a></li>
 				<li data-role="list-divider">Seguridad de alumnos</li>
 				<li><a href="#">Registrar personas autorizadas a recoger niños pequeños</a></li>
 				
