Ajustes verificacion de cuaderno de control

--- a/public/menu.html
+++ b/public/menu.html
@@ -22,9 +22,9 @@
 				<li data-role="list-divider">Cuaderno de control</li>
 				<li><a href="/cuadernos_controles">Registrar</a></li>
 				<li><a href="/cuaderno_controles_revisiones">Revisar</a></li>
-				<li><a href="/cuaderno_controles_revisiones/verificar">Consultar</a></li>
+				<li><a href="/cuaderno_controles_revisiones/0/0/verificar">Verificar</a></li>
 				<li data-role="list-divider">Seguridad de alumnos</li>
-				<li><a href="#">Registrar personas autorizadas a recoger niños pequeños</a></li>
+				<li><a href="#">Personas autorizadas a recoger</a></li>
 				
 			</ul>
 			</div><!--/content-primary -->		
