--- a/public/menu.html
+++ b/public/menu.html
@@ -24,7 +24,7 @@
 				<li><a href="/cuaderno_controles_revisiones">Revisar</a></li>
 				<li><a href="/cuaderno_controles_revisiones/0/0/verificar">Verificar</a></li>
 				<li data-role="list-divider">Seguridad de alumnos</li>
-				<li><a href="#">Personas autorizadas a recoger</a></li>
+				<li><a href="/alumnos">Personas vinculadas</a></li>
 				
 			</ul>
 			</div><!--/content-primary -->		
