Ajustes vincular personas

--- a/public/menu.html
+++ b/public/menu.html
@@ -25,7 +25,7 @@
 				<li><a href="/cuaderno_controles_revisiones/0/0/verificar">Verificar</a></li>
 				<li data-role="list-divider">Seguridad de alumnos</li>
 				<li><a href="/personas_vinculadas">Personas vinculadas</a></li>
-                                <li><a href="/alumnos">Vincular personas</a></li>
+                                <li><a href="/alumnos/0/listar_seccion">Vincular personas</a></li>
 				
 			</ul>
 			</div><!--/content-primary -->		
