Salida de alumnos

--- a/public/menu.html
+++ b/public/menu.html
@@ -26,7 +26,7 @@
 				<li data-role="list-divider">Seguridad de alumnos</li>
 				<li><a href="/personas_vinculadas">Personas vinculadas</a></li>
                                 <li><a href="/alumnos/0/listar_seccion">Vincular personas</a></li>
-				
+				<li><a href="/alumnos_personas_vinculadas/0/0/consultar">Salida de alumnos</a></li>
 			</ul>
 			</div><!--/content-primary -->		
 
