Afinacion criterios de aceptacion

--- a/public/menu.html
+++ b/public/menu.html
@@ -13,25 +13,25 @@
             <div data-role="page" class="type-interior">
 
 		<div data-role="header">
-		<h1>Menú de opciones</h1>
-	</div><!-- /header -->
+                    <h1>Menú de opciones</h1>
+                </div><!-- /header -->
 
-	<div data-role="content">
-			<div class="content-primary">
-			<ul data-role="listview">
-				<li data-role="list-divider">Cuaderno de control</li>
-				<li><a href="/cuadernos_controles">Registrar</a></li>
-				<li><a href="/cuaderno_controles_revisiones">Revisar</a></li>
-				<li><a href="/cuaderno_controles_revisiones/0/0/verificar">Verificar</a></li>
-				<li data-role="list-divider">Seguridad de alumnos</li>
-				<li><a href="/personas_vinculadas">Personas vinculadas</a></li>
-                                <li><a href="/alumnos/0/listar_seccion">Vincular personas</a></li>
-				<li><a href="/alumnos_personas_vinculadas/0/0/consultar">Salida de alumnos</a></li>
-			</ul>
-			</div><!--/content-primary -->		
+                <div data-role="content">
+                    <div class="content-primary">
+                    <ul data-role="listview">
+                        <li data-role="list-divider">Cuaderno de control</li>
+                        <li><a href="/cuadernos_controles">Registrar</a></li>
+                        <li><a href="/cuaderno_controles_revisiones">Revisar</a></li>
+                        <li><a href="/cuaderno_controles_revisiones/0/0/verificar">Verificar</a></li>
+                        <li data-role="list-divider">Seguridad de alumnos</li>
+                        <li><a href="/personas_vinculadas">Personas vinculadas</a></li>
+                        <li><a href="/alumnos/0/listar_seccion">Vincular personas</a></li>
+                        <li><a href="/alumnos_personas_vinculadas/0/0/consultar">Salida de alumnos</a></li>
+                    </ul>
+                    </div><!--/content-primary -->		
 
-			
-		</div><!-- /content -->
+                </div>
+            </div><!-- /content -->
         </div>
     </body>
 </html>
