--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,32 @@
   </head>
 
   <body class="statement">
+      
+        <script type="text/javascript">
+            reformal_wdg_w    = "713";
+            reformal_wdg_h    = "460";
+            reformal_wdg_domain    = "micole";
+            reformal_wdg_mode    = 0;
+            reformal_wdg_title   = "Mi Cole";
+            reformal_wdg_ltitle  = "     Comentarios      ";
+            reformal_wdg_lfont   = "";
+            reformal_wdg_lsize   = "";
+            reformal_wdg_color   = "#0b8a4a";
+            reformal_wdg_bcolor  = "#516683";
+            reformal_wdg_tcolor  = "#FFFFFF";
+            reformal_wdg_align   = "left";
+            reformal_wdg_waction = 0;
+            reformal_wdg_vcolor  = "#9FCE54";
+            reformal_wdg_cmline  = "#E0E0E0";
+            reformal_wdg_glcolor  = "#105895";
+            reformal_wdg_tbcolor  = "#FFFFFF";
+
+            reformal_wdg_bimage = "fd6f140ac375daa5eb8c6db21672ab80.png";
+
+        </script>
+
+        <script type="text/javascript" language="JavaScript" src="http://idea.informer.com/tabn2v4.js?domain=micole"></script><noscript><a href="http://micole.idea.informer.com">Mi Cole feedback</a> <a href="http://idea.informer.com"> Powered by <img src="http://widget.idea.informer.com/tmpl/images/widget_logo.jpg" /></a></noscript>
+
       <div class="container">
           <nav>
               <ul>
