--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,14 @@
   <head>
     <title>Software para colegios orientado a los padres: MiCole</title>
     <meta charset="utf-8">
+    
+    <meta property="og:title" content="MiCole.pe" />
+    <meta property="og:type" content="product" />
+    <meta property="og:url" content="http://micole.herokuapp.com" />
+    <meta property="og:image" content="http://micole.herokuapp.com/assets/logo_small2.gif" />
+    <meta property="og:site_name" content="Mi Cole" />
+    <meta property="fb:admins" content="1276612484" />
+    <meta property="og:description" content="Software para colegios orientado a los padres"/>
 
     <link rel="stylesheet" href="landingpage.css" />
   </head>
