--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
               <ul>
                 <li><a class="button pequeno azul" href="#"><span>Prueba el sistema</span></a></li>
                 <li><a class="button pequeno azul" href="/video.html"><span>Mira los vídeos</span></a></li>
-                <li><a class="button pequeno azul" href="#"><span>Precios</span></a><!--strong><a href="/">Precios</a></strong--></li>
+                <li><a class="button pequeno azul" href="/precios.html"><span>Precios</span></a><!--strong><a href="/">Precios</a></strong--></li>
                 <li><a class="button pequeno azuloscuro" href="log_in"><span>Log in</span></a></li>
                 <!--li><strong><a href="/">Precios</a></strong></br>Desde S/. 0.50</li-->
                 <!--li class="signin"><a href="log_in">Log in</a></li-->
