Ajustes landing page y prueba del sistema

--- a/public/precios.html
+++ b/public/precios.html
@@ -149,7 +149,11 @@
                         <td>S/. 1.00</td>
                     </tr>
                 </table>
-            </div>  
+            </div> 
+            </br>
+            <p>
+                Si tiene alguna duda, puede contactarse con nosotros, con mucho gusto le atenderemos.
+            </p>
             <p></p>
       <footer>
          <p><a href="/" data-behavior="show_opt_in" class="optin">Noticias por Email</a> &nbsp; <span>|</span> &nbsp; <a href="/">Ayuda</a> &nbsp; <span>|</span> &nbsp; Copyright &copy;2012, Todos los derechos reservados.</p>
