--- a/public/index.html
+++ b/public/index.html
@@ -58,11 +58,11 @@
         <!-- feedback -->
         
       <div class="container">         
-          <nav>              
+          <nav>    
               <ul>
-                <li><a class="button pequeno azul" href="/demo.html"><span>Prueba el sistema</span></a></li>
-                <li><a class="button pequeno azul" href="/video.html"><span>Mira los vídeos</span></a></li>
-                <li><a class="button pequeno azul" href="/precios.html"><span>Precios</span></a><!--strong><a href="/">Precios</a></strong--></li>
+                <li><strong><a href="/demo.html">Demo</a>&nbsp;|</strong></li>
+                <li><strong><a href="/video.html">Videos</a>&nbsp;|</strong></li>
+                <li><strong><a href="/precios.html">Precios</a>&nbsp;&nbsp;&nbsp;</strong></li>
                 <li><a class="button pequeno azuloscuro" href="log_in"><span>Log in</span></a></li>
                 <!--li><strong><a href="/">Precios</a></strong></br>Desde S/. 0.50</li-->
                 <!--li class="signin"><a href="log_in">Log in</a></li-->
@@ -80,9 +80,13 @@
                 <li style="padding:15px">Acceso móvil</li>
             </ul>
 
+            <div style="text-align: center">
+                <a class="button mediano azul" href="/demo.html"><span>Prueba el sistema</span></a>&nbsp;&nbsp;&nbsp;
+                <a class="button mediano azul" href="/video.html"><span>Mira los vídeos</span></a>
+            </div>
           </header>
 
-          <div>
+          <div class="redessociales">
             <!-- facebook: like -->
             <div class="fb-like" data-href="http://micole.herokuapp.com" data-send="false" data-width="450" data-show-faces="false"></div>
             <!-- facebook: like -->
@@ -121,9 +125,9 @@
             <!-- google+ -->
           </div>
 
-          <footer>
+          <!--footer>
              <p><a href="/" data-behavior="show_opt_in" class="optin">Noticias por Email</a> &nbsp; <span>|</span> &nbsp; <a href="/">Ayuda</a> &nbsp; <span>|</span> &nbsp; Copyright &copy;2012, Todos los derechos reservados.</p>
-          </footer>
+          </footer-->
     </div> <!-- class container -->
 
 
