Ajustes en estado, confirmacion, respuesta y consulta de actividades, revision de cuaderno de control, bloqueo de url

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
                 <li><strong><a href="/demo.html">Demo</a>&nbsp;|</strong></li>
                 <li><strong><a href="/video.html">Videos</a>&nbsp;|</strong></li>
                 <li><strong><a href="/precios.html">Precios</a>&nbsp;&nbsp;&nbsp;</strong></li>
-                <li><a class="button pequeno azuloscuro" href="log_in"><span>Log in</span></a></li>
+                <li><a class="button pequeno azuloscuro" href="#" onclick="window.open('log_in', 'micole', 'top=0, left=0, height=' + (screen.height - 100) + ', width='+ screen.width + ',location=no, status=no')"><span>Log in</span></a></li>
                 <!--li><strong><a href="/">Precios</a></strong></br>Desde S/. 0.50</li-->
                 <!--li class="signin"><a href="log_in">Log in</a></li-->
               </ul>    
